tests/baselines/reference/comparisonOperatorWithSubtypeObjectOnProperty.errors.txt
comparisonOperatorWithSubtypeObjectOnProperty.ts(33,11): error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(34,11): error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(35,11): error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(36,11): error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(39,11): error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(40,11): error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(41,11): error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(42,11): error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(45,11): error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(46,11): error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(47,11): error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(48,11): error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(51,11): error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(52,11): error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(53,11): error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
comparisonOperatorWithSubtypeObjectOnProperty.ts(54,11): error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.


==== comparisonOperatorWithSubtypeObjectOnProperty.ts (16 errors) ====
    class Base {
        public a: string;
    }
    
    class Derived extends Base {
        public b: string;
    }
    
    class A1 {
        public a: Base;
        public b: Base;
    }
    
    class B1 {
        public a: Base;
        public b: Derived;
    }
    
    class A2 {
        private a;
    }
    
    class B2 extends A2 {
        private b;
    }
    
    var a1: A1;
    var a2: A2;
    var b1: B1;
    var b2: B2;
    
    // operator <
    var ra1 = a1 < b1;
              ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A1' and 'B1'.
    var ra2 = a2 < b2;
              ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'A2' and 'B2'.
    var ra3 = b1 < a1;
              ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B1' and 'A1'.
    var ra4 = b2 < a2;
              ~~~~~~~
!!! error TS2365: Operator '<' cannot be applied to types 'B2' and 'A2'.
    
    // operator >
    var rb1 = a1 > b1;
              ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A1' and 'B1'.
    var rb2 = a2 > b2;
              ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'A2' and 'B2'.
    var rb3 = b1 > a1;
              ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B1' and 'A1'.
    var rb4 = b2 > a2;
              ~~~~~~~
!!! error TS2365: Operator '>' cannot be applied to types 'B2' and 'A2'.
    
    // operator <=
    var rc1 = a1 <= b1;
              ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A1' and 'B1'.
    var rc2 = a2 <= b2;
              ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'A2' and 'B2'.
    var rc3 = b1 <= a1;
              ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B1' and 'A1'.
    var rc4 = b2 <= a2;
              ~~~~~~~~
!!! error TS2365: Operator '<=' cannot be applied to types 'B2' and 'A2'.
    
    // operator >=
    var rd1 = a1 >= b1;
              ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A1' and 'B1'.
    var rd2 = a2 >= b2;
              ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'A2' and 'B2'.
    var rd3 = b1 >= a1;
              ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B1' and 'A1'.
    var rd4 = b2 >= a2;
              ~~~~~~~~
!!! error TS2365: Operator '>=' cannot be applied to types 'B2' and 'A2'.
    
    // operator ==
    var re1 = a1 == b1;
    var re2 = a2 == b2;
    var re3 = b1 == a1;
    var re4 = b2 == a2;
    
    // operator !=
    var rf1 = a1 != b1;
    var rf2 = a2 != b2;
    var rf3 = b1 != a1;
    var rf4 = b2 != a2;
    
    // operator ===
    var rg1 = a1 === b1;
    var rg2 = a2 === b2;
    var rg3 = b1 === a1;
    var rg4 = b2 === a2;
    
    // operator !==
    var rh1 = a1 !== b1;
    var rh2 = a2 !== b2;
    var rh3 = b1 !== a1;
    var rh4 = b2 !== a2;